2008-11-14  Dan Williams  <dcbw@redhat.com>

	* Really tag 0.7.0-rc2

	* Makefile.am
		- Fix dist problem with translatable destkop files

2008-11-14  Dan Williams  <dcbw@redhat.com>

	* Tag 0.7.0-rc2

2008-11-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (wireless_get_more_info): bring the secrets dialog to the front

2008-11-14  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c
		- Pass system settings 'CanModify' property along to the connection
			editor window

	* src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
		- (nm_connection_editor_new): track whether system settings can actually
			add conenctions or not
		- (populate_connection_ui, set_editor_sensitivity): don't enable the
			system settings checkbox if system settings can't be modified

2008-11-14  Dan Williams  <dcbw@redhat.com>

	Patch from Kelemen Gábor <kelemeng@gnome.hu>

	* Makefile.am
	  nm-applet.desktop.in
	  nm-connection-editor.desktop.in
	  po/POTFILES.in
		- Make desktop files translatable and fix up the descriptions to not
			suck (bgo #559636)

2008-11-13  Dan Williams  <dcbw@redhat.com>

	Add support for PKCS#12 private keys (bgo #558982)

	* src/utils/utils.c
		- (utils_fill_connection_certs): report errors

	* src/connection-editor/nm-connection-editor.c
		- (nm_connection_editor_set_connection): run initial validation from
			and idle handler to allow file choosers time to asynchronously
			find their files

	* src/gconf-helpers/gconf-helpers.c
		- (get_one_private_key): add private key passwords to the secrets hash
			if the private key is a pkcs#12 private key
		- (nm_gconf_get_keyring_items): move force-included private key passwords
			functionality into get_one_private_key()

	* src/wireless-security/eap-method.c
	  src/wireless-security/eap-method.h
		- (eap_method_default_file_chooser_filter_new): use differnet filters