@@ -1,3 +1,9 @@
+2008-11-15  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/gconf-upgrade.c
+		- (nm_gconf_read_0_6_wpa_settings, nm_gconf_read_0_6_eap_settings):
+			fix up 0.6 GConf upgrades for WPA and LEAP
+
 2008-11-14  Dan Williams  <dcbw@redhat.com>
 
 	* Really tag 0.7.0-rc2
